[package]
name = "canvasfun"
version = "0.1.0"
edition = "2021"
description = ""
repository = "https://github.com/metalglove/rust_learn"
license = ""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
random_color = "0.6.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'Window',
  'EventTarget',
  'MouseEvent',
  'Node',
]

[profile.release]
opt-level = "s"